# trafficsense

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  trips.trips.xml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
src/detection/: calibrate.py  detect_video.py  incidents.py  pipeline.py  pipeline_stream.py  server.py  speed_count.py  test_setup.py  track_video.py
src/signals/: adaptive_log.json  adaptive_log_real.json  adaptive_tripinfo.xml  adaptive_tripinfo_real.xml  compare.py  fixed_log.json  fixed_log_real.json  fixed_tripinfo.xml  fixed_tripinfo_real.xml  run_adaptive.py  run_fixed.py  sumo_stream.py
src/signals/network/: connections.con.xml  edges.edg.xml  intersection.net.xml  nodes.nod.xml  routes.rou.xml  simulation.sumocfg
src/signals/network_real/: intersection.net.xml  map.osm  routes.rou.xml  simulation.sumocfg  test_trips.xml  trips.trips.xml
